implemented initial version
