# backend/src/main/java/com/bukovina/platform/accommodation/guesthouse/dto/AmenityResponse.java
@@ -1,3 +1,9 @@
 package com.bukovina.platform.accommodation.guesthouse.dto;
 
-public record AmenityResponse(String id, String name, String description, String category) {}
+public record AmenityResponse(
+    String id,
+    String name,
+    String description,
+    String detailedDescription,
+    String category,
+    String pricingType) {}
